--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4"
   }
