--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.4"
   }
 }
